--- a/tinkovv_bot/tinkovv_bot.csproj
+++ b/tinkovv_bot/tinkovv_bot.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MailKit" Version="4.3.0" />
     <PackageReference Include="telegram.bot" Version="19.0.0" />
   </ItemGroup>
 
