--- a/tinkovv_bot/tinkovv_bot.csproj
+++ b/tinkovv_bot/tinkovv_bot.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="MailKit" Version="4.3.0" />
+    <PackageReference Include="RestSharp" Version="110.2.0" />
     <PackageReference Include="telegram.bot" Version="19.0.0" />
   </ItemGroup>
 
